tests/error/errors_on_usage/shadow_global4.py
from guppylang import guppy
from hugr.std.float import FloatVal

x = guppy.constant("x", "float", FloatVal(4.2))


@guppy
def main(b: bool) -> None:
    if b:
        x = 1.0

    def inner() -> float:
        return x


main.compile(entrypoint=False)
