tests/error/errors_on_usage/shadow_global4.err
Error: Variable not defined (at $FILE:13:15)
   | 
11 | 
12 |     def inner() -> float:
13 |         return x
   |                ^ `x` might be undefined ...
   | 
 9 |     if b:
   |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
